--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline{
   agent any
     stages{
-      stage("pipeline){
+      stage("pipeline"){
           steps{
               echo "Hello Mukesh"
           }
