--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,6 +4,7 @@ pipeline{
       stage("pipeline"){
           steps{
             git url: "https://github.com/ramesh9849/sample-repo-3.git", branch: "main"
+            sh "cat README.md"
           }
       }
     }
