--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,7 +3,9 @@ pipeline{
     stages{
       stage("pipeline"){
           steps{
+            script{
             git url: "https://github.com/ramesh9849/sample-repo-3.git", branch: "main"
+            }
             sh "cat README.md"
           }
       }
