--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline{
       stage("pipeline"){
           steps{
             script{
-            git url: "https://github.com/ramesh9849/sample-repo-3.git" , branch: "main"
+            //git url: "https://github.com/ramesh9849/sample-repo-3.git" , branch: "main"
             }
             sh "cat README.md"
           }
