--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,1 +1,14 @@
 
+pipeline{
+  agent any
+    stages{
+      stage("pipeline"){
+          steps{
+            script{
+            git url: "https://github.com/ramesh9849/sample-repo-3.git" , branch: "main"
+            }
+            sh "cat README.md"
+          }
+      }
+    }
+}
